:bug: try controlling x overflow on mobile

--- a/site/engpage.css
+++ b/site/engpage.css
@@ -418,6 +418,10 @@ footer p{
 }
 
 @media (max-width: 1000px) {
+    body{
+    overflow-x: hidden;
+    }
+ 
     #title{
         display: none;
     }
